jQuery added and some refactoring done

--- a/popup.html
+++ b/popup.html
@@ -24,6 +24,7 @@
       -
       - [1]: http://developer.chrome.com/extensions/contentSecurityPolicy.html
      -->
+    <script src="library/jquery-2.1.4.js"></script>
     <script src="popup.js"></script>
   </head>
   <body>
