Move CSS to separate file

--- a/popup.html
+++ b/popup.html
@@ -2,21 +2,7 @@
 <html>
   <head>
     <title>image saver</title>
-    <style>
-      body {
-        min-width: 830px;
-        overflow-x: hidden;
-      }
-
-      img {
-        margin: 5px;
-        max-width: 400px;
-      }
-
-      .download {
-        border: 3px solid red;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="imagesaver.css">
 
     <!--
       - JavaScript and HTML must be in separate files: see our Content Security
