Adds "Clear Downloaded" button
Also fixed issue with not marking thumbnail-gathered images as
downloaded
Added Icon in Extensions manager
Relocated onDeterminingFilename()
Solves #5

--- a/popup.html
+++ b/popup.html
@@ -19,6 +19,7 @@
     <button id="deSelectAllButton"> Unselect All </button>
     <br />
     <button id="clearListButton"> Clear List </button>
+    <button id="clearDownloadedButton"> Clear Downloaded </button>
     <button id="stopDownloadsButton"> Stop Downloads </button>
     <button id="scanningButton"> Scanning: </button>
     <br />
