[#6] Implements downloading image-copy
On failure to download, images put in "fail" class
Lets user download these via image-copy to canvas

--- a/popup.html
+++ b/popup.html
@@ -21,7 +21,7 @@
     <button id="clearDownloadedButton"> Clear Downloaded </button>
     <br />
     <button id="downloadButton"> Download Selected </button>
-    <button id="downloadFailedImagesButton"> Copy-save failed images </button>
+    <button id="copySaveImagesButton"> Copy-save failed images </button>
     <button id="stopDownloadsButton"> Stop Downloads </button>
     <br />
     <button id="captureButton"> Capture all Images in Window </button>
