--- a/popup.html
+++ b/popup.html
@@ -1,18 +1,19 @@
 <!doctype html>
-<html>
+<html ng-app='imageSaverApp'>
   <head>
     <title>image saver</title>
-    <link rel="stylesheet" type="text/css" href="imagesaver.css">
-
-    <!--
-      - JavaScript and HTML must be in separate files: see our Content Security
-      - Policy documentation[1] for details and explanation.
-      -
-      - [1]: http://developer.chrome.com/extensions/contentSecurityPolicy.html
-     -->
+	<!-- Material Design Lite -->
+	<link rel="stylesheet" href="./library/material.min.css">
+	<script src="./library/material.min.js"></script>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- Angular -->
+  <script src="./library/angular.min.js"></script>
+    <!-- jQuery-->
     <script src="library/jquery-2.1.4.js"></script>
+    <!-- Self css -->
+    <link rel="stylesheet" type="text/css" href="imagesaver.css">
   </head>
-  <body>
+  <body ng-controller="imageListCtrl">
     
     <button id="selectAllButton"> Select All </button>
     <button id="deSelectAllButton"> Unselect All </button>
@@ -32,7 +33,18 @@
     <input type="checkbox" id="cleanDownloadCheckbox">
       Scrub DL History <sup title="Remove records from Download history upon completion or failure">(?)</sup>
     <br />
+
+    <div ng-repeat="image in images" class="mdl-card image_card">
+      <div class="mdl-card__title mdl-card--expand">
+        <img ng-src="{{image.sample}}" ng-attr-data-orig-src="{{image.url}}" loadcheck>
+      </div>
+      <div class="mdl-card__actions">
+        <span class="demo-card-image__filename">{{image.name}}</span>
+      </div>
+    </div>
+
   </body>
-    <script src="popup.js"></script>
+    <script src="js/popup.js"></script>
+    <script src="js/ang.js"></script>
 </html>
 
